--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
             <option value="rawUm">Gap (μm)</option>
             <option value="c40">Comandante C40 (Clicks)</option>
             <option value="timemoreC3">Timemore C3 (Clicks)</option>
+            <option value="kultra">1Zpresso K-Ultra (Dial)</option>
             <option value="kplus">1Zpresso K+ (Dial)</option>
-            <option value="zp6">1Zpresso ZP6 (Dial)</option>
+            <option value="zp6">1Zpresso ZP6-Special (Dial)</option>
             <option value="jx">1Zpresso JX (Clicks)</option>
             <option value="jultra">1Zpresso J-Ultra (Clicks)</option>
             <option value="p100">Lagom P100 (Dial)</option>
@@ -49,6 +50,7 @@
         <select id="outputGrinder">
             <option value="c40">Comandante C40 (Clicks)</option>
             <option value="timemoreC3">Timemore C3 (Clicks)</option>
+            <option value="kultra">1Zpresso K-Ultra (Dial)</option>
             <option value="kplus">1Zpresso K+ (Dial)</option>
             <option value="zp6">1Zpresso ZP6 (Dial)</option>
             <option value="jx">1Zpresso JX (Clicks)</option>
@@ -73,7 +75,8 @@
         rawUm: { um: 1, dec: 0 },
         c40: { um: 30, dec: 0 },
         timemoreC3: { um: 23.3, dec: 0 },
-        kplus: { um: 100, dec: 1 }, 
+        kultra: { um: 200, dec: 1 }, // 1.0 on dial = 10 clicks = 200um
+        kplus: { um: 220, dec: 1 },  // 1.0 on dial = 10 clicks = 220um
         zp6: { um: 133.3, dec: 1 }, 
         jx: { um: 25, dec: 0 },
         jultra: { um: 8, dec: 0 },
